--- a/global/css/responsive.css
+++ b/global/css/responsive.css
@@ -109,7 +109,6 @@
     }
 
     .header {
-        padding-top: 115px;
         padding-left: 10px;
         padding-right: 10px;
     }
